doc/2.0/_sources/reference/generated/ak.sort.rst.txt
ak.sort
-------

.. py:module: ak.sort

Defined in `awkward.operations.ak_sort <https://github.com/scikit-hep/awkward-1.0/blob/21f485b45e31dcd53968a279e47e4df4596a194b/src/awkward/operations/ak_sort.py>`__ on `line 9 <https://github.com/scikit-hep/awkward-1.0/blob/21f485b45e31dcd53968a279e47e4df4596a194b/src/awkward/operations/ak_sort.py#L9>`__.

.. py:function:: ak.sort(array, axis=-1)


    :param array: Array-like data (anything :py:obj:`ak.to_layout` recognizes).
    :param axis: The dimension at which this operation is applied. The
             outermost dimension is ``0``, followed by ``1``, etc., and negative
             values count backward from the innermost: ``-1`` is the innermost
             dimension, ``-2`` is the next level up, etc.
    :type axis: int
    :param ascending: If True, the first value in each sorted group
                  will be smallest, the last value largest; if False, the order
                  is from largest to smallest.
    :type ascending: bool
    :param stable: If True, use a stable sorting algorithm (introsort:
               a hybrid of quicksort, heapsort, and insertion sort); if False,
               use a sorting algorithm that is not guaranteed to be stable
               (heapsort).
    :type stable: bool
    :param highlevel: If True, return an :py:obj:`ak.Array`; otherwise, return
                  a low-level :py:obj:`ak.contents.Content` subclass.
    :type highlevel: bool
    :param behavior: Custom :py:obj:`ak.behavior` for the output array, if
                 high-level.
    :type behavior: None or dict

Returns a sorted array.

For example,

.. code-block:: python


    >>> ak.sort(ak.Array([[7, 5, 7], [], [2], [8, 2]]))
    <Array [[5, 7, 7], [], [2], [2, 8]] type='4 * var * int64'>

