doc/2.8/_sources/reference/generated/ak.sort.rst.txt
ak.sort
-------

.. py:module: ak.sort

Defined in `awkward.operations.ak_sort <https://github.com/scikit-hep/awkward/blob/0b5ee6e87d2a6d475c58ee0b3ff2106b415311fd/src/awkward/operations/ak_sort.py>`__ on `line 22 <https://github.com/scikit-hep/awkward/blob/0b5ee6e87d2a6d475c58ee0b3ff2106b415311fd/src/awkward/operations/ak_sort.py#L22>`__.

.. py:function:: ak.sort(array, axis=-1, *, ascending=True, stable=True, highlevel=True, behavior=None, attrs=None)


    :param array: Array-like data (anything :py:obj:`ak.to_layout` recognizes).
    :param axis: The dimension at which this operation is applied. The
             outermost dimension is ``0``, followed by ``1``, etc., and negative
             values count backward from the innermost: ``-1`` is the innermost
             dimension, ``-2`` is the next level up, etc.
             If a str, it is interpreted as the name of the axis which maps
             to an int if named axes are present. Named axes are attached
             to an array using :py:obj:`ak.with_named_axis` and removed with
             :py:obj:`ak.without_named_axis`; also see the
             `Named axes user guide <../../user-guide/how-to-array-properties-named-axis.html>`__.
    :type axis: int or str
    :param ascending: If True, the first value in each sorted group
                  will be smallest, the last value largest; if False, the order
                  is from largest to smallest.
    :type ascending: bool
    :param stable: If True, use a stable sorting algorithm; if False,
               use a sorting algorithm that is not guaranteed to be stable.
    :type stable: bool
    :param highlevel: If True, return an :py:obj:`ak.Array`; otherwise, return
                  a low-level :py:obj:`ak.contents.Content` subclass.
    :type highlevel: bool
    :param behavior: Custom :py:obj:`ak.behavior` for the output array, if
                 high-level.
    :type behavior: None or dict
    :param attrs: Custom attributes for the output array, if
              high-level.
    :type attrs: None or dict

Returns a sorted array.

For example,

.. code-block:: python


    >>> ak.sort(ak.Array([[7, 5, 7], [], [2], [8, 2]]))
    <Array [[5, 7, 7], [], [2], [2, 8]] type='4 * var * int64'>

